Fix $group with empty object expression

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.3.2, 8.0.0-rc4
    • Affects Version/s: 8.0.0-rc0, 7.3.0
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0, v7.3
    • Hide

      Right now, parsing {$group: {_id: {$expr: {}}} will trip an invariant failure, crashing the process. It looks like SERVER-66248 introduced the '$expr' syntax to allow this to happen.

      Show
      Right now, parsing {$group: {_id: {$expr: {}}} will trip an invariant failure, crashing the process. It looks like SERVER-66248 introduced the '$expr' syntax to allow this to happen.
    • 102
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The $group processing code setup expects that any ExpressionObject will not have any children. It could probably handle this case without asserting, or we could fix the parsing of {$expr: {}} to avoid producing an ExpressionObject. 

            Assignee:
            Charlie Swanson
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: