SERVER-89611 Fix $group with empty object expression

GitOrigin-RevId: 3072571d940020fd37399b2c5100c7680083584e