jstests/aggregation/sources/group/group_by_variable.js
@@ -5,8 +5,7 @@
 const coll = db.group_by_system_var;
 coll.drop();
 
-assert.commandWorked(coll.insert({_id: 1, x: 1}));
-assert.commandWorked(coll.insert({_id: 2, x: 2}));
+assert.commandWorked(coll.insert([{_id: 1, x: 1}, {_id: 2, x: 2}]));
 
 function checkPipeline(pipeline, expectedResults) {
     const res = coll.aggregate(pipeline).toArray();
